# atomic-agents

./: README.md  context7.json  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/release/: SKILL.md
.github/workflows/: docs.yml
atomic-examples/agent-identity/: README.md  pyproject.toml
atomic-examples/agent-identity/agent_identity/: main.py
claude-plugin/atomic-agents/: README.md
claude-plugin/atomic-agents/.claude-plugin/: plugin.json
scripts/: generate_llms_files.py
