[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_identity"]

[project]
name = "agent-identity"
version = "1.0.0"
description = "Agent Identity Protocol example — cryptographic identity for interoperable atomic agents"
readme = "README.md"
authors = [
    { name = "Atomic Agents Contributors" }
]
requires-python = ">=3.12"
dependencies = [
    "atomic-agents>=1.0.0",
]
